--- a/smart_counter/smart_counter.vcxproj.filters
+++ b/smart_counter/smart_counter.vcxproj.filters
@@ -36,10 +36,10 @@
     <ClCompile Include="sys.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\smart_counter_6_finall_v1\finall_v1\lib\librabbitmq\utils.c">
+    <ClCompile Include="log.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="log.c">
+    <ClCompile Include="utils.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -101,10 +101,10 @@
     <ClInclude Include="..\..\smart_counter_6_finall_v1\finall_v1\lib\librabbitmq\config.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\smart_counter_6_finall_v1\finall_v1\lib\librabbitmq\utils.h">
+    <ClInclude Include="log.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="log.h">
+    <ClInclude Include="utils.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
